# lancedb-mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: npm-publish.yml  release.yml
scripts/: install.js
src/: db.rs  embeddings.rs  main.rs
