[package]
name = "lancedb-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
clap = { version = "4.5.54", features = ["derive", "env"] }
futures = "0.3.31"
hf-hub = "0.4.3"
lancedb = "0.23.1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.12.0", features = ["transport-io", "transport-streamable-http-server"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
schemars = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
text-embeddings-backend = { git = "https://github.com/huggingface/text-embeddings-inference", tag = "v1.8.3", features = ["candle"] }
text-embeddings-backend-candle = { git = "https://github.com/huggingface/text-embeddings-inference", tag = "v1.8.3", default-features = false }
text-embeddings-backend-core = { git = "https://github.com/huggingface/text-embeddings-inference", tag = "v1.8.3" }
tokenizers = "0.21.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
text-embeddings-backend-candle = { git = "https://github.com/huggingface/text-embeddings-inference", tag = "v1.8.3", features = ["accelerate"] }
